@@ -1,1 +1,1 @@
-1.8.16.0-rc2
+1.8.16.0
